chore: add profile pics to qwixx game
