# qwixx_openapi.yml
@@ -158,7 +158,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/NewPlayerRequest'
+              $ref: '#/components/schemas/Player'
       responses:
         '201':
           description: Player was added successfully
@@ -426,17 +426,7 @@ components:
           type: string
         profilePic:
           type: string
-
-    NewPlayerRequest:
-      type: object
-      required:
-        - name
-      properties:
-        id:
-          type: string
-          description: Caller-supplied player ID. If omitted a UUID is generated.
-        name:
-          type: string
+          description: Zero-based global sprite index selected in the GameRoom lobby.
 
     NewGameRequest:
       type: object
